src/parser/snapshots/monkey_language_server__parser__test__fn_call_unhappy_10.snap
---
source: src/parser/test.rs
description: "add(@, 2)"
expression: result
---
[
    Call {
        token: Token(LParen, "(", (0,3)->(0,4)),
        func: Identifier {
            token: Token(Identifier, "add", (0,0)->(0,3)),
            name: "add",
        },
        args: Err(
            Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,4)->(0,5)),
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 9,
            },
        },
    },
]

===================================

add(@, 2)
    ^ [Error] SyntaxError: Unexpected '@'.
